# voice-agent

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  README_GITHUB_ACTIONS.md  build.sh  config.yaml  deploy.sh  index.py  logger.py  main.py  pyproject.toml  test_ghcr_auth.sh
.github/workflows/: deploy-to-sae.yml
agents/: README.md  __init__.py  entry.py
agents/official_website/: __init__.py  context.py  entry.py
agents/official_website/agents/: chat.py  scene.py  vocabulary.py  word_creation_analysis.py  writing.py
agents/official_website/service/: message_service.py
agents/official_website/templates/: common.py
agents/onboarding/: __init__.py  entry.py
agents/vocab/: __init__.py  base_agent.py  context.py  entry.py
agents/vocab/agents/: co_occurrence.py  cooccurrence.py  etymology.py  greeting.py  greeting_agent.py  main_schedule_agent.py  route_analysis.py  sentence-practice.py  sentence_practice.py  synonym.py  word_creation_analysis.py
agents/vocab/service/: event_service.py  message_service.py  task_service.py
config/: nacos.py
livekit-plugins-aliyun/: pyproject.toml
livekit-plugins-aliyun/livekit/plugins/aliyun/: __init__.py  stt.py
livekit-plugins-minimax/: pyproject.toml
livekit-plugins-minimax/livekit/plugins/minimax/: __init__.py  tts.py
livekit-plugins-minimax/livekit_plugins_minimax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: database.py
nacos-data/snapshot/: app.vocab.agent.instruction.warmup+agent_instruction+3e87fec5-0df2-4099-b0cd-36df5ed7209f
plugins/aliyun/: ali_token.py  stt.py
plugins/minimax/: models.py  tts.py
plugins/tokenizer/: mixedLanguangeTokenizer.py
