[tool.poetry]
name = "multi-agent-python"
version = "0.1.0"
description = "Multi-agent system using LiveKit"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
livekit = ">=1.0.3"
livekit-agents = "1.0.11"
livekit-plugins-openai = "1.0.11"
livekit-plugins-silero = "1.0.11"
python-dotenv = ">=1.0,<2.0"
livekit-plugins-minimax = {path = "./livekit-plugins-minimax"}
livekit-plugins-aliyun = {path = "./livekit-plugins-aliyun"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
