[tool.poetry]
name = "multi-agent-python"
version = "0.1.0"
description = "Multi-agent system using LiveKit"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
livekit = ">=1.0.3"
livekit-agents = "1.0.11"
livekit-plugins-openai = "1.0.11"
livekit-plugins-silero = "1.0.11"
python-dotenv = ">=1.0,<2.0"
nls = {git = "https://github.com/aliyun/alibabacloud-nls-python-sdk.git"}
scipy = "^1.13.0" # Keep version compatible with Python 3.9
aliyun-python-sdk-core = "^2.13.38"
numpy = "*" # Add numpy as it's used in stt.py
livekit-plugins-noise-cancellation = ">=0.2,<1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
