[tool.poetry]
name = "vocab-agent"
version = "0.1.0"
description = "Multi-agent system using LiveKit"
authors = ["User"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
livekit = ">=1.0.3"
livekit-plugins-openai = "1.0.11"
livekit-plugins-silero = "1.0.11"
python-dotenv = ">=1.0,<2.0"
nls = {git = "https://github.com/aliyun/alibabacloud-nls-python-sdk.git"}
scipy = "^1.13.0" # Keep version compatible with Python 3.9
aliyun-python-sdk-core = "^2.13.38"
numpy = "*" # Add numpy as it's used in stt.py
livekit-plugins-noise-cancellation = ">=0.2,<1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
aiomysql = "^0.2.0"
azure-cognitiveservices-speech = "^1.43.0"
aliyun-log-python-sdk = "^0.9.19"
loguru = "^0.7.3"
livekit-api = "^1.0.2"
livekit-plugins-cartesia = "^1.0.19"
nacos-sdk-python = "^2.0.6"
livekit-agents = "^1.1.6"
livekit-plugins-deepgram = "^1.2.2"
bamboo-shared = {path = "bamboo-shared", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
