[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-plugins-minimax"
version = "1.0.0"
description = "LiveKit plugin for MiniMax services"
authors = [
    {name = "LiveKit", email = "info@livekit.io"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "livekit-agents>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/livekit/agents-python"
"Bug Tracker" = "https://github.com/livekit/agents-python/issues" 